Modified Service contracts

--- a/specification/manufacturingdatasolution/ManufacturingDataSolution.Service/examples/2025-03-01/ServiceApis_CreateOrReplaceOpcuaMapping.json
+++ b/specification/manufacturingdatasolution/ManufacturingDataSolution.Service/examples/2025-03-01/ServiceApis_CreateOrReplaceOpcuaMapping.json
@@ -8,17 +8,49 @@
       "entityName": "TestName",
       "targetEntity": "TestEntity",
       "updateRelatedNode": true,
-      "relationshipType": "TestRelationshipType"
+      "relationshipType": "TestRelationshipType",
+      "mappingData": [
+          {
+            "dmmKeys": [
+              {
+                "id": "123"
+              }
+            ],
+            "opcuaName": "urn:assembly.seattle;nsu=http://opcfoundation.org/UA/Station/;i=124"
+          },
+          {
+            "dmmKeys": [
+              {
+                "id": "12345"
+              }
+            ],
+            "opcuaName": "urn:assembly.seattle;nsu=http://opcfoundation.org/UA/Station/;i=400"
+          }
+        ]
     }
   },
   "responses": {
     "200": {
       "body": {
         "entityName": "TestName",
-        "dmmKeys": [
-          null
+        "mappingData": [
+          {
+            "dmmKeys": [
+              {
+                "id": "123"
+              }
+            ],
+            "opcuaName": "urn:assembly.seattle;nsu=http://opcfoundation.org/UA/Station/;i=124"
+          },
+          {
+            "dmmKeys": [
+              {
+                "id": "12345"
+              }
+            ],
+            "opcuaName": "urn:assembly.seattle;nsu=http://opcfoundation.org/UA/Station/;i=400"
+          }
         ],
-        "opcuaName": "yahqvbscnklfwbkorycnine",
         "targetEntity": "TestEntity",
         "updateRelatedNode": true,
         "relationshipType": "TestRelationshipType"
@@ -27,10 +59,24 @@
     "201": {
       "body": {
         "entityName": "TestName",
-        "dmmKeys": [
-          null
+        "mappingData": [
+          {
+            "dmmKeys": [
+              {
+                "id": "123"
+              }
+            ],
+            "opcuaName": "urn:assembly.seattle;nsu=http://opcfoundation.org/UA/Station/;i=124"
+          },
+          {
+            "dmmKeys": [
+              {
+                "id": "12345"
+              }
+            ],
+            "opcuaName": "urn:assembly.seattle;nsu=http://opcfoundation.org/UA/Station/;i=400"
+          }
         ],
-        "opcuaName": "yahqvbscnklfwbkorycnine",
         "targetEntity": "TestEntity",
         "updateRelatedNode": true,
         "relationshipType": "TestRelationshipType"
