--- a/specification/manufacturingdatasolution/ManufacturingDataSolution.Service/examples/2025-03-01/ServiceApis_ListOpcuaMapping.json
+++ b/specification/manufacturingdatasolution/ManufacturingDataSolution.Service/examples/2025-03-01/ServiceApis_ListOpcuaMapping.json
@@ -11,10 +11,14 @@
         "value": [
           {
             "entityName": "TestEntity",
-            "dmmKeys": [
-              null
+            "mappingData": [
+              {
+                "dmmKeys": [
+                  null
+                ],
+                "opcuaName": "yahqvbscnklfwbkorycnine"
+              }
             ],
-            "opcuaName": "testOpcuaName",
             "targetEntity": "testTargetEntity",
             "updateRelatedNode": true,
             "relationshipType": "testRelationshipType"
