--- a/specification/manufacturingdatasolution/data-plane/Microsoft.Industries.ManufacturingDataSolution/stable/2025-03-01/examples/ServiceApis_UpdateOpcuaMapping.json
+++ b/specification/manufacturingdatasolution/data-plane/Microsoft.Industries.ManufacturingDataSolution/stable/2025-03-01/examples/ServiceApis_UpdateOpcuaMapping.json
@@ -8,17 +8,29 @@
       "entityName": "wsvvgqrzc",
       "targetEntity": "useobkltmhzhnzvgnauiirswifjcj",
       "updateRelatedNode": true,
-      "relationshipType": "ezbumavaqzkxlk"
+      "relationshipType": "ezbumavaqzkxlk",
+      "mappingData": [
+        {
+          "dmmKeys": [
+            null
+          ],
+          "opcuaName": "yahqvbscnklfwbkorycnine"
+        }
+      ]
     }
   },
   "responses": {
     "200": {
       "body": {
         "entityName": "criezurjyjwx",
-        "dmmKeys": [
-          null
+        "mappingData": [
+          {
+            "dmmKeys": [
+              null
+            ],
+            "opcuaName": "yahqvbscnklfwbkorycnine"
+          }
         ],
-        "opcuaName": "yahqvbscnklfwbkorycnine",
         "targetEntity": "nwu",
         "updateRelatedNode": true,
         "relationshipType": "klvhooqo"
@@ -27,10 +39,14 @@
     "201": {
       "body": {
         "entityName": "criezurjyjwx",
-        "dmmKeys": [
-          null
+        "mappingData": [
+          {
+            "dmmKeys": [
+              null
+            ],
+            "opcuaName": "yahqvbscnklfwbkorycnine"
+          }
         ],
-        "opcuaName": "yahqvbscnklfwbkorycnine",
         "targetEntity": "nwu",
         "updateRelatedNode": true,
         "relationshipType": "klvhooqo"
