--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,19 @@
       "request": "launch",
       "name": "Launch Program",
       "program": "${file}"
+    },
+    {
+      "type": "node",
+      "name": "lint-diff",
+      "request": "launch",
+      "program": "${workspaceFolder}/node_modules/.bin/lint-diff",
+      "args": [
+        "--before", "/tmp/azure-rest-api-specs",
+        "--after", ".",
+        "--changed-files-path", "./changed-files.txt"
+      ],
+      "cwd": "${workspaceFolder}",
+      "preLaunchTask": "npm: install root"
     }
   ]
 }
