* IPConfigurationPublicIPAddressConfiguration for go, java, javascript, and python * remove above langauge sdks from automated swagger-based generation of sdk

--- a/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
+++ b/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
@@ -37,6 +37,7 @@ options:
     service-dir: "sdk/resourcemanager/servicefabricmanagedclusters"
     package-dir: "armservicefabricmanagedclusters"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    module-version: "0.4.0"
     fix-const-stuttering: true
     generate-examples: true
     generate-fakes: true
