--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -67,9 +67,13 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
+      # *** IMPORTANT ***
+      # For workflows that are triggered by the pull_request_target event, the workflow runs in the context of the base of the pull request.
+      # You should make sure that you do not check out, build, or run untrusted code from the pull request (head) with this event.
       - uses: actions/checkout@v4
         with:
           # Only needs .github folder for automation, not the files in the PR (analyzed in a separate workflow)
+          # Uses the .github folder from the PR base branch (pull_request_target trigger), or the repo default branch (other triggers).
           sparse-checkout: |
             .github
 
