stop uploading artifact for pull_request_target

--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -108,9 +108,9 @@ jobs:
 
       # Required for consumers to identify the PR associated with this workflow run.
       # Output can be trusted, because it was uploaded from a workflow that is trusted, because "issue_comment",
-      # "pull_request_target", and "workflow_run" only trigger on workflows in the default branch.
+      # and "workflow_run" only trigger on workflows in the default branch.
       # Consumers should verify the "event_name" before attempting to extract from the artifact name
-      - if: ${{ github.event_name == 'issue_comment' || github.event_name == 'pull_request_target' || github.event_name == 'workflow_run' }}
+      - if: ${{ github.event_name == 'issue_comment' || github.event_name == 'workflow_run' }}
         name: Upload artifact with issue number
         uses: ./.github/actions/add-empty-artifact
         with:
