--- a/specification/vmware/Microsoft.AVS.Management/tspconfig.yaml
+++ b/specification/vmware/Microsoft.AVS.Management/tspconfig.yaml
@@ -18,6 +18,8 @@ options:
     omit-unreachable-types: true
     use-read-only-status-schema: true
   "@azure-tools/typespec-ts":
+    typespec-title-map: 
+      AzureVMwareSolutionAPIClient: AzureVMwareSolutionAPI
     azureSdkForJs: true
     isModularLibrary: true
     generateMetadata: true
