--- a/specification/ai/Azure.AI.Unified/tspconfig.yaml
+++ b/specification/ai/Azure.AI.Unified/tspconfig.yaml
@@ -8,14 +8,32 @@ options:
     emitter-output-dir: "{project-root}/.."
     azure-resource-provider-folder: "data-plane"
     emit-lro-options: "none"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/azure-ai-unified.json"
+    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/azure-ai-projects-1dp.json"
   "@azure-tools/typespec-python":
     package-mode: "dataplane"
-    package-dir: "azure-ai-unified-autogen"
+    package-dir: "azure-ai-projects-1dp"
     package-name: "{package-dir}"
     flavor: azure
-    generate-test: true
-    generate-sample: true
+    generate-test: false
+    generate-sample: false
+  "@azure-tools/typespec-csharp":
+    package-mode: "dataplane"
+    package-dir: "Azure.AI.Projects.1DP"
+    namespace: "Azure.AI.Projects.1DP"
+    package-name: "{package-dir}"
+    model-namespace: false
+    flavor: azure
+    generate-test: false
+    generate-sample: false
+  "@azure-tools/typespec-ts":
+    package-dir: "ai-projects-1dp"
+    generateTest: true
+    generateMetadata: false
+    packageDetails:
+      name: "@azure/ai-projects-1dp"
+    flavor: azure
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/data-plane"
+  disable:
+    "@azure-tools/typespec-azure-core/casing-style": "Since we have many names in the form XxxxAIXxxx"
