Added cses and vmss keywords to spell file and updated the description

--- a/specification/network/cspell.yaml
+++ b/specification/network/cspell.yaml
@@ -12,6 +12,7 @@ words:
   - arpa
   - azfw
   - cloudngfw
+  - cses
   - customizability
   - ddoscustompolicies
   - ddosprotectionplans
@@ -49,6 +50,7 @@ words:
   - unpreparing
   - virtualwans
   - virutal
+  - vmss
   - vmssvm
   - vnets
   - vpnsites
