--- a/specification/network/cspell.yaml
+++ b/specification/network/cspell.yaml
@@ -87,4 +87,11 @@ overrides:
       **/specification/network/resource-manager/Microsoft.Network/stable/**/webapplicationfirewall.json
     words:
       - conditon
+  - filename: >-
+      **/specification/network/resource-manager/Microsoft.Network/stable/**/networkVirtualAppliance.json
+    words:
+      - reimage
+      - Reimage
+      - Reimages
+      - reimages
 
