--- a/specification/security/resource-manager/Microsoft.Security/preview/2024-08-01-preview/examples/DefenderForStorage/PutDefenderForStorageSettings_example.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2024-08-01-preview/examples/DefenderForStorage/PutDefenderForStorageSettings_example.json
@@ -1,6 +1,6 @@
 {
   "parameters": {
-    "api-version": "2022-12-01-preview",
+    "api-version": "2024-08-01-preview",
     "resourceId": "subscriptions/20ff7fc3-e762-44dd-bd96-b71116dcdc23/resourceGroups/SampleRG/providers/Microsoft.Storage/storageAccounts/samplestorageaccount",
     "settingName": "current",
     "defenderForStorageSetting": {
@@ -9,7 +9,18 @@
         "malwareScanning": {
           "onUpload": {
             "isEnabled": true,
-            "capGBPerMonth": -1
+            "capGBPerMonth": -1,
+            "filters": {
+              "excludeBlobsWithPrefix": [
+                "unscanned-container",
+                "sample-container/logs"
+              ],
+              "excludeBlobsWithSuffix": [
+                ".log",
+                ".jpg"
+              ],
+              "excludeBlobsLargerThan": 1024
+            }
           },
           "scanResultsEventGridTopicResourceId": "/subscriptions/20ff7fc3-e762-44dd-bd96-b71116dcdc23/resourceGroups/SampleRG/providers/Microsoft.EventGrid/topics/sampletopic"
         },
@@ -31,7 +42,19 @@
           "malwareScanning": {
             "onUpload": {
               "isEnabled": true,
-              "capGBPerMonth": -1
+              "capGBPerMonth": -1,
+              "filters": {
+                "excludeBlobsWithPrefix": [
+                  "sample-container/logs",
+                  "single-excluded-container/",
+                  "excluded-containers"
+                ],
+                "excludeBlobsWithSuffix": [
+                  ".log",
+                  ".jpg"
+                ],
+                "excludeBlobsLargerThan": 1024
+              }
             },
             "scanResultsEventGridTopicResourceId": "/subscriptions/20ff7fc3-e762-44dd-bd96-b71116dcdc23/resourceGroups/SampleRG/providers/Microsoft.EventGrid/topics/sampletopic",
             "operationStatus": {
