* added Basic Information section to readme.md * removed readme.insert_lanaguge.md used in autorest gen * tried moving options from readme.python.me to tspconfig * renamed SF client name for python

--- a/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
+++ b/specification/servicefabricmanagedclusters/ServiceFabricManagedClusters.Management/tspconfig.yaml
@@ -23,6 +23,8 @@ options:
     package-name: "{package-dir}"
     generate-test: true
     generate-sample: true
+    package-version: 0.1.0b2
+    no-namespace-folders: true
     flavor: azure
   "@azure-tools/typespec-ts":
     package-dir: "arm-servicefabricmanagedclusters"
