--- a/specification/ai/Azure.AI.Unified/tspconfig.yaml
+++ b/specification/ai/Azure.AI.Unified/tspconfig.yaml
@@ -37,3 +37,5 @@ linter:
     - "@azure-tools/typespec-azure-rulesets/data-plane"
   disable:
     "@azure-tools/typespec-azure-core/casing-style": "Since we have many names in the form XxxxAIXxxx"
+    "@azure-tools/typespec-azure-core/no-string-discriminator": "Use an extensible union instead of a plain string"
+    "@azure-tools/typespec-azure-core/bad-record-type": "We do want to use Record<unknown>, and not Record<string>. But this needs further investigation"
