Basic output scenario (missing several baseline reporting cases)

--- a/.github/workflows/lintdiff.yaml
+++ b/.github/workflows/lintdiff.yaml
@@ -49,4 +49,5 @@ jobs:
             --before before \
             --after after \
             --changed-files-path changed-files.txt \
-            --out-file placeholder.txt
+            --out-file $GITHUB_STEP_SUMMARY
+
