--- a/eng/tools/lint-diff/package.json
+++ b/eng/tools/lint-diff/package.json
@@ -16,10 +16,11 @@
     "node": ">= 18.0.0"
   },
   "dependencies": {
-    "@apidevtools/json-schema-ref-parser":"^9.0.9",
+    "@apidevtools/json-schema-ref-parser": "^9.0.9",
     "@azure-tools/openapi-tools-common": "^1.2.2",
     "@azure/openapi-markdown": "^0.9.4",
     "autorest": "3.6.1",
+    "change-case": "^5.4.4",
     "commonmark": "^0.31.2"
   },
   "devDependencies": {
