--- a/.github/package.json
+++ b/.github/package.json
@@ -1,5 +1,8 @@
 {
   "type": "module",
+  "dependencies": {
+    "yaml": "^2.7.0"
+  },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/github-script": "github:actions/github-script",
