--- a/.github/workflows/arm-incremental-typespec-preview.yaml
+++ b/.github/workflows/arm-incremental-typespec-preview.yaml
@@ -5,10 +5,9 @@ on:
     paths:
       # Always trigger on changes to WF itself
       - ".github/**"
-      # Only trigger if PR includes at least one non-example RM swagger, since this is only way WF can return "true"
+      # Only trigger if PR includes at least one changed RM file, since this is only way WF can return "true"
       # All consumers of workflow must treat "skipped" as equal to "completed false"
-      - "**/resource-manager/**/*.json"
-      - "!**/examples/**/*.json"
+      - "**/resource-manager/**"
 
 permissions:
   contents: read
@@ -28,6 +27,12 @@ jobs:
           # "git show" on specific files instead of cloning whole repo
           sparse-checkout: |
             .github
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+
+      - run: npm ci --omit dev
 
       # Output is "true" if PR contains only incremental changes to an existing TypeSpec RP
       - id: incremental-typespec
