--- a/.github/package.json
+++ b/.github/package.json
@@ -1,5 +1,8 @@
 {
   "type": "module",
+  "_comments": {
+    "dependencies": "Runtime dependencies must be kept to an absolute minimum for performance"
+  },
   "dependencies": {
     "yaml": "^2.7.0"
   },
