--- a/.github/workflows/arm-incremental-typespec-preview.yaml
+++ b/.github/workflows/arm-incremental-typespec-preview.yaml
@@ -30,9 +30,11 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "20.x"
 
-      - run: npm ci --omit dev
+      - run: |
+          npm ci --omit dev --no-audit --verbose
+          npm ls -a
 
       # Output is "true" if PR contains only incremental changes to an existing TypeSpec RP
       - id: incremental-typespec
