--- a/.github/workflows/arm-incremental-typespec-preview.yaml
+++ b/.github/workflows/arm-incremental-typespec-preview.yaml
@@ -28,14 +28,16 @@ jobs:
           sparse-checkout: |
             .github
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node 20 and install deps
+        uses: ./.github/actions/setup-node-install-deps
         with:
-          node-version: "20.x"
-
-      - run: |
-          npm ci --omit dev --no-audit --verbose
-          npm ls -a
-
+          # actions/github-script@v7 uses Node 20
+          node-version: 20.x
+          # "--no-audit": improves performance
+          # "--omit dev": not needed at dev time, improves performance
+          install-command: "npm ci  --no-audit --omit dev"
+          working-directory: ./.github
+    
       # Output is "true" if PR contains only incremental changes to an existing TypeSpec RP
       - id: incremental-typespec
         name: ARM Incremental TypeSpec (Preview)
