Add runtime dependency "marked"

--- a/.github/package.json
+++ b/.github/package.json
@@ -4,6 +4,7 @@
     "dependencies": "Runtime dependencies must be kept to an absolute minimum for performance"
   },
   "dependencies": {
+    "marked": "^15.0.7",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
