publish label artifact separately

--- a/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
+++ b/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
@@ -182,17 +182,6 @@ extends:
               echo "##vso[task.setvariable variable=GeneratedSDKInformation]$sdk_gen_info"
               echo "Generated SDK Information : $sdk_gen_info"
 
-              # Create the breaking change indicator file and set artifact name
-              mkdir -p "$(System.DefaultWorkingDirectory)/out/test"
-              ARTIFACT_NAME="spec-gen-sdk-go-true"
-              file_path="$(System.DefaultWorkingDirectory)/out/test/$ARTIFACT_NAME"
-              echo "file_path: $file_path"
-              echo "This file indicates potential breaking changes in the Go SDK" > $file_path
-
-              # Set the variable for artifact name at runtime
-              echo "##vso[task.setvariable variable=breakingChangeArtifactName]$ARTIFACT_NAME"
-              echo "Breaking change artifact name set to: $ARTIFACT_NAME"
-
               cd $(SpecRepoDirectory)
               npm ci
               node $(SpecRepoDirectory)/eng/tools/spec-gen-sdk-runner/cmd/spec-gen-sdk-runner.js \
@@ -206,10 +195,16 @@ extends:
                 $optional_params
             displayName: 'Generate SDK'
 
-          - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
-            parameters:
-              ArtifactName: $(breakingChangeArtifactName)
-              ArtifactPath: "$(System.DefaultWorkingDirectory)/out/test"
+          - ${{ if ne(variables['AddBreakingChangeLabelArtifactName'], '') }}:
+            - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
+              parameters:
+                ArtifactName: $(AddBreakingChangeLabelArtifactName)
+                ArtifactPath: "$(System.DefaultWorkingDirectory)/$(AddBreakingChangeLabelArtifactPath)"
+          - ${{ if ne(variables['RemoveBreakingChangeLabelArtifactName'], '') }}:
+            - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
+              parameters:
+                ArtifactName: $(RemoveBreakingChangeLabelArtifactName)
+                ArtifactPath: "$(System.DefaultWorkingDirectory)/$(RemoveBreakingChangeLabelArtifactPath)"
 
           - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
             parameters:
