--- a/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
+++ b/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
@@ -196,6 +196,26 @@ extends:
             displayName: 'Generate SDK'
 
           - ${{ if ne(variables['AddBreakingChangeLabelArtifactName'], '') }}:
+            - task: PowerShell@2
+              displayName: 'Output variables'
+              inputs:
+                targetType: 'inline'
+                script: |
+                  $artifactName = "$(AddBreakingChangeLabelArtifactName)"
+                  $artifactPath = "$(System.DefaultWorkingDirectory)/$(AddBreakingChangeLabelArtifactPath)"
+                  Write-Host "Artifact Name: $artifactName"
+                  Write-Host "Artifact Path: $artifactPath"
+                  if (Test-Path $artifactPath) {
+                    Get-ChildItem $artifactPath -Recurse
+                  } 
+                  $artifactName = "$(RemoveBreakingChangeLabelArtifactName)"
+                  $artifactPath = "$(System.DefaultWorkingDirectory)/$(RemoveBreakingChangeLabelArtifactPath)"
+                  Write-Host "Artifact Name: $artifactName"
+                  Write-Host "Artifact Path: $artifactPath"
+                  if (Test-Path $artifactPath) {
+                    Get-ChildItem $artifactPath -Recurse
+                  }
+          - ${{ if ne(variables['AddBreakingChangeLabelArtifactName'], '') }}:
             - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
               parameters:
                 ArtifactName: $(AddBreakingChangeLabelArtifactName)
