Commit changed autorest outputs for data-plane.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@azure-tools/typespec-client-generator-core": "next",
     "@azure-tools/typespec-liftr-base": "0.8.0",
     "@azure/avocado": "^0.9.1",
-    "@typespec/compiler": "next",
-    "@typespec/http": "next",
+    "@typespec/compiler": "https://artprodcus3.artifacts.visualstudio.com/A0fb41ef4-5012-48a9-bf39-4ee3de03ee35/29ec6040-b234-4e31-b139-33dc4287b756/_apis/artifact/cGlwZWxpbmVhcnRpZmFjdDovL2F6dXJlLXNkay9wcm9qZWN0SWQvMjllYzYwNDAtYjIzNC00ZTMxLWIxMzktMzNkYzQyODdiNzU2L2J1aWxkSWQvNDY0NTUxNS9hcnRpZmFjdE5hbWUvcGFja2FnZXM1/content?format=file&subPath=%2Ftypespec-compiler-0.67.0-pr-6357.20250312.62.tgz",
+    "@typespec/http": "https://artprodcus3.artifacts.visualstudio.com/A0fb41ef4-5012-48a9-bf39-4ee3de03ee35/29ec6040-b234-4e31-b139-33dc4287b756/_apis/artifact/cGlwZWxpbmVhcnRpZmFjdDovL2F6dXJlLXNkay9wcm9qZWN0SWQvMjllYzYwNDAtYjIzNC00ZTMxLWIxMzktMzNkYzQyODdiNzU2L2J1aWxkSWQvNDY0NTUxNS9hcnRpZmFjdE5hbWUvcGFja2FnZXM1/content?format=file&subPath=%2Ftypespec-http-0.67.0-pr-6357.20250312.62.tgz",
     "@typespec/openapi": "next",
     "@typespec/openapi3": "next",
     "@typespec/prettier-plugin-typespec": "next",
