--- a/eng/tools/lint-diff/package.json
+++ b/eng/tools/lint-diff/package.json
@@ -20,6 +20,7 @@
     "@azure-tools/openapi-tools-common": "^1.2.2",
     "@azure/openapi-markdown": "^0.9.4",
     "autorest": "3.6.1",
+    "axios": "^1.8.3",
     "change-case": "^5.4.4",
     "commonmark": "^0.31.2"
   },
