--- a/.github/package.json
+++ b/.github/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "_comments": {
-    "dependencies": "Runtime dependencies must be kept to an absolute minimum for performance"
+    "dependencies": "Runtime dependencies must be kept to an absolute minimum for performance, ideally with no transitive dependencies"
   },
   "dependencies": {
     "marked": "^15.0.7",
