--- a/specification/agricultureplatform/AgriculturePlatform.Management/tspconfig.yaml
+++ b/specification/agricultureplatform/AgriculturePlatform.Management/tspconfig.yaml
@@ -34,3 +34,13 @@ options:
     package-dir: "azure-resourcemanager-agricultureplatform"
     service-name: "Agriculture Platform"
     flavor: "azure"
+  "@azure-tools/typespec-ts":
+    flavor: "azure"
+    isModularLibrary: true
+    hierarchyClient: false
+    experimentalExtensibleEnums: true
+    enableOperationGroup: true
+    generateSample: true
+    package-dir: "arm-agricultureplatform"
+    packageDetails:
+      name: "@azure/arm-agricultureplatform"
