--- a/specification/manufacturingdatasolution/ManufacturingDataSolution.Copilot/tspconfig.yaml
+++ b/specification/manufacturingdatasolution/ManufacturingDataSolution.Copilot/tspconfig.yaml
@@ -10,7 +10,7 @@ options:
     azure-resource-provider-folder: "data-plane"
     emitter-output-dir: "{project-root}/../"
     omit-unreachable-types: true
-    output-file: "./data-plane/{service-name}/{version-status}/{version}/openapi.json"
+    output-file: "./mds-copilot/data-plane/{service-name}/{version-status}/{version}/openapi.json"
   "@azure-tools/typespec-python":
     package-dir: "azure-microsoft-industry-manufacturing-mds-copilot"
     package-name: "{package-dir}"
