--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typespec/streams": "next",
     "@typespec/versioning": "next",
     "@typespec/xml": "next",
+    "@typespec/sse": "next",
     "azure-rest-api-specs-eng-tools": "file:eng/tools",
     "oav": "^3.5.1",
     "prettier": "~3.3.3",
