--- a/specification/iotoperations/IoTOperations.Management/tspconfig.yaml
+++ b/specification/iotoperations/IoTOperations.Management/tspconfig.yaml
@@ -9,6 +9,7 @@ options:
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/iotoperations.json"
     use-read-only-status-schema: true
+    omit-unreachable-types: true
   "@azure-tools/typespec-csharp":
     flavor: azure
     package-dir: "Azure.ResourceManager.IotOperations"
